--- a/vercel.json
+++ b/vercel.json
@@ -43,7 +43,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css|svg|jpg|jpeg|png|gif|ico|woff|woff2|ttf|eot))",
+      "source": "/(.*?)\\.(js|css|svg|jpg|jpeg|png|gif|ico|woff|woff2|ttf|eot)$",
       "headers": [
         {
           "key": "Cache-Control",
