--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "prettier": "3.6.2",
+    "sharp": "^0.34.5",
     "start-server-and-test": "^2.0.12",
+    "svgo": "^4.0.0",
     "tailwindcss": "^4.1.13",
     "vite": "^5.4.11",
     "vite-plugin-vue-devtools": "^8.0.0",
